[project]
name = "nonebot-plugin-pingti"
dynamic = ["version"]
description = "Shop with lower prices by searching with alternative keywords."
authors = [{ name = "student_2333", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.3.1",
    "nonebot-plugin-alconna>=0.48.0",
    "httpx>=0.27.0",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-pingti"

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_pingti/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
